docs: 更新 websocket 100w 连接测试结果;